format md in 07

--- a/07.采访序跋类/李敖书序集.md
+++ b/07.采访序跋类/李敖书序集.md
@@ -1,4 +1,8 @@
-#《李敖书序集》目录
+# 李敖书序集
+
+<!-- toc -->
+
+## 目录
 
 * 一、写在居浩然《十论》的前面
 * 二、介绍《汪政权的开场与收场》
@@ -20,9 +24,7 @@
 * 十八、汪荣祖《章太炎研究》序
 * 十九、安全局机密文件——《历年办理匪案汇编》序
 
-
-
-##写在居浩然《十论》的前面
+## 写在居浩然《十论》的前面
 
 居浩然的《十论》新排版版样今早送到，看着这部老友的遗稿即将成书，回首前尘，倍增感怀。
 
@@ -210,9 +212,7 @@
 
 1987年11月23夜
 
-
-
-##介绍《汪政权的开场与收场》
+## 介绍《汪政权的开场与收场》
 
 汪政权就是抗战时期汪精卫在南京成立的政权。与在重庆的蒋介石蒋政权遥遥相对。它创建在1940年3月20日，结束在1945年8月10日，前后有五年四个月零十二天的寿命。在这政权创建前两年（1938年），汪精卫还是执政的国民党的副总裁、还是领导过抗战的行政首长、还是国防最高会议主席、还是最高民意机关——国民参政会的议长，在这些重要头衔以前，他还是国民党总理孙中山的左右手和遗嘱执笔人，且在革命时代，还是深入虎穴行刺摄政王被判无期徒刑的革命英雄……以这样显赫的身份与历史，“他竟毅然脱离了中枢，由重庆，而昆明，而河内，而上海，而南京。在东南的一片废墟上，在敌人枪刺下的占领地区，树起了与国民政府同一的旗帜、奉行同一的主义、采取了同一的政治制度，更叫着同一的名称；但建立起基本政策绝对相反的另一政权！”这真是一件大怪事！
 
@@ -230,9 +230,7 @@
 
 1987年11月25日
 
-
-
-##《恶法录及其他》新版前言
+## 《恶法录及其他》新版前言
 
 我在1954年以同等学力参加大专联招，误入台大法律专修科。法律专修科在报名简章中明列台大各科系之一，我不明就里，在圈选的一大堆科系中，也顺便填了它，不料放榜之日，吾名在焉。入校以后，才知道全班有的是成绩足以分发到法律系却被误分到此班的（如陆啸钊等人），有的是因入学成绩少考了三到五分而被名列此班的，并且知道我们这班是第二届，头一年还有一班第一届（苏秋镇那班），两届一共有一百五十人，当时考大学是四校院联招，四校院是国立台湾大学、台湾省立师范学院（师范大学前身）、台湾省立农学院（中兴大学前身）、台湾省立工学院（成功大学前身），我们这一百五十人考试成绩都在后面三个学院学生之上，却不能如他们那样念四年、戴方帽子，当然群情愤激，认为无异上当。
 
@@ -270,9 +268,7 @@
 
 1988年2月2日晨
 
-
-
-##介绍《紫禁城的黄昏》
+## 介绍《紫禁城的黄昏》
 
 意大利导演贝托鲁奇（BernardoBertolucci）《末代皇帝》（TheLastEmperor）电影中，溥仪在监狱里被调查当年真相，共产党高干拿出一本厚书，按书索骥，追问不舍，这本厚书，就是溥仪外国老师庄士敦（ReginaldFlemingJohnston）所写的五百页名著——《紫禁城的黄昏》（TwilightintheForbiddenCity）。
 
@@ -336,9 +332,7 @@
 
 1988年庄士敦死后五十年写于台湾
 
-
-
-##推荐《海国男儿》
+## 推荐《海国男儿》
 
 赫克脱马洛（HectorMalot）是法国作家，生于1830年，死于1907年。他年轻时学法律，后来弃法律就文学，遂成大家。他在文学史中，地位不高；但在外国，却被另眼看待。1893年1月18日，对法国文学的态度一向不大好的英国《泰晤士报》（TheTimes）这样说：“赫克脱马洛是一个例外，他在英国比在本国获得更多的桂冠。”他在中国处遇，也正如此。他的名作《苦儿努力记》（SansFamille有章衣萍等译本，儿童版；又有徐蔚南译本，世界版，名《孤零少年》）；《苦女奋斗记》（AdventuresofPerrine有赵余勋译本，少年版）、《海国男儿》（RomoinKolbpis有适夷译本，建文版）等，都在中国风行。我1947年在北京念小学时，就是这些书的读者，其中最喜欢的，就是《海国男儿》。
 
@@ -352,9 +346,7 @@
 
 1988年5月11日在台湾
 
-
-
-##介绍《满宫残照记》
+## 介绍《满宫残照记》
 
 中国最后一任皇帝——爱新觉罗溥仪一生的遭际，是帝王史上最有特色的。溥仪不是历史上当皇帝时间最久的，最久的是古埃及第六朝法老佩比二世（PepiII），此公6岁登基，在位九十一年方死。而溥仪呢，在庇比二世登基之年，已经第一次从帝位上下了台。溥仪虽不是当皇帝时间最久的，却是次数最多的，他一生当了三次皇帝，第一次是3岁到6岁，当了三年（1909-1912）；第二次是12岁，当了十二天（1917）；第三次是29岁到40岁，当了十一年（1934-1945）。这三次当皇帝，头两次溥仪年纪小，自己没有责任可言，最后一次当满洲国皇帝却不无责任。溥仪三次当皇帝，只有这一次假戏真做，虽然做到头来，还是一名傀儡。
 
@@ -406,9 +398,7 @@
 
 1988年6月29日
 
-
-
-##《调査局研究》序
+## 《调査局研究》序
 
 1938年，国民党成立了它庞大的特务机构——中央调查统计局，简称中统局。这个局，就是调查局的前身。
 
@@ -468,9 +458,7 @@
 
 1988年9月8日夜
 
-
-
-##推荐《李宗仁回忆录》
+## 推荐《李宗仁回忆录》
 
 李宗仁是现代中国的传奇人物，他生在清朝光绪十七年（1891），是广西桂林人。他小时候在家乡半耕半读，后来进入陆军小学堂，加入同盟会。再入陆军速成学堂。毕业后从下级军官干起，从护国战争到护法战争，无役不与，骁勇善战。1923年加入国民党，统一广西后，参加北伐，任第七军军长，有大功于北伐。此后与蒋介石分分合合，到抗战时，出任第五战区司令长官，台儿庄一役，名扬中外。在他指挥下，中国抗战的能打肯打，给世人深刻的印象，而其中牺牲的精神，如张自忠死事之勇，尤属英烈千秋。但这些杂牌军的战绩，却因此更遭黄埔系之忌。抗战胜利后，李宗仁出任北平行辕主任，后来竞选副总统，打败蒋介石支持的孙科，自此与蒋介石的关系更为尖锐。1949年1月21日，蒋介石下野，李宗仁任代总统，依法实为总统。在国民党被打出大陆时，远赴美国。十六年后，回归大陆。1969年死在北京，活了79岁。
 
@@ -584,9 +572,7 @@
 
 1985年1月22日，于美国新泽西州北林镇寓庐
 
-
-
-##我看《汪精卫传》
+## 我看《汪精卫传》
 
 今年2月，我的老家吉林省的吉林文史出版社出了一部不错的书——《汪精卫传》，由闻少华先生执笔、丁守和先生序言，全书共分十七章、六十一节，从汪精卫“清贫身世”写起，直写到“汪坟被毁”，涵盖了汪精卫的一生。后附“汪精卫年表”，便于检查。总体看来，不失为一部简明活泼的传记。
 
@@ -600,9 +586,7 @@
 
 1988年12月15日
 
-
-
-##新版《军统内幕》缘起
+## 新版《军统内幕》缘起
 
 国民党丢掉大陆后，绝大多数的党员依然故我，但是偶有一二个人的反省与觉悟，也堪一述。在台湾，雷震的反省与觉悟是最鲜明的，国民党在大陆作恶，雷震有份，但人到台湾，他却洗面革心，用文字以赎前愆；在大陆，沈醉的反省与觉悟是最鲜明的，国民党在大陆作恶，沈醉有份，但“身陷”大陆，他却洗面革心，用文字知过能改。沈醉写了许多书，揭发国民党的内幕、表白他自己的内心。由于他曾是国民党的将军；由于他两度被共产党下狱，前后达十六年之久；由于他的儿女犹在台湾，种种迹象，按照常理，如此觉悟，未免令人起疑。例如台湾的乔家才将军就公开写文章说沈醉“身陷”大陆，身不由己，作品乃“共干捉刀，沈醉署名”。但是，1980年沈醉曾有香港之行，到了自由地区，身已由己了，他可以留在香港、也可以办理去台湾的手续，亲友劝他：“‘苦海无边，回头是岸’，你何不趁机远走高飞呢？”可是，沈醉毅然表示，没错，回头是岸，可是岸不在别处，“岸在北京”！他终于又回大陆了。由此可见，沈醉的觉悟是出自内心的——他真的从内心深处，抛弃了国民党；从内心深处，忏悔他的过去，沈醉真的变了。
 
@@ -614,9 +598,7 @@
 
 〔附记〕《军统内幕》在大陆，第一版是1984年2月出版的；第二版是1985年2月出版的。第二版多了一篇《我所知道的郑介民》，李敖出版社根据的是第二版。大陆版没有图片，图片都是我亲自配加的，想为作者所乐许，也为读者所乐见。大陆版中不无错落之处，如中美特种技术合作所的英文名称印为SINO-AMERICANCO-OPERATIONOFFICE，实际应为SINO-AMERICANCOOPERATIVEORGANIZATION；梅乐斯中校的英文名称印为MARYMILES，实际应为MILTONE.MILES；该所“有过去在美国很享声誉的漫画家”、“姓名已记不清楚”，实际为SAULSTEINBERG等是。另在大陆版中，也不无隐讳之处，如唐XX即唐生明等是。为了存真，不便僭改，读者开卷如多，触类旁通，自能明辨。此类小疵，不足为异也。本书的权威性与历史地位，自不以小疵而有影响也。
 
-
-
-##新印《厚黑教主传》述源
+## 新印《厚黑教主传》述源
 
 俞大维讲过一段故事，他说：“我发现读了几十年的书，却往往有许多地方未能看懂。真是可笑又可悲，人愈老愈有奇想，年轻时看书看不懂，我认为脑筋有毛病。现在看书看不懂，我认为书有毛病。陈寅恪先生1912年第一次由欧洲回国，往见他父亲（散原老人）的老友夏曾佑先生。曾佑先生对他说：‘你是我老友之子，我很高兴你懂得很多种文字，有很多书可看。我只能看中国书，但可惜都看完了，现已无书可看了。’寅恪告别出来，心想此老真是荒唐。中国书籍浩如烟海，哪能都看完了。寅恪七十岁左右，我又见到他。他说：‘现在我老了，也与夏先生同感。中国书虽多，不过基本几十种而已，其他不过翻来覆去，东抄西抄。’”
 
@@ -630,9 +612,7 @@
 
 1989年4月25日
 
-
-
-##新版《政海秘辛》缘起
+## 新版《政海秘辛》缘起
 
 1957年毛泽东写《蝶恋花》一词答李淑一，全文是：“我失骄杨君失柳，杨柳轻扬，直上重霄九。问讯吴刚何所有，吴刚捧出桂花酒。寂寞嫦娥舒广袖，万里长空，且为忠魂舞。忽报人间曾伏虎，泪飞顿作倾盆雨。”这首词是毛泽东怀念他的太太杨开慧和其他殉难同志的。大意说，太太杨开慧被国民党捕去枪毙，她在死后，上了九重天了、上了月亮了。月亮上吴刚伐桂，以桂花酒招待他们。寂寞的嫦娥在万里长空之中，也为他们这些为理想而死的忠魂跳舞。忽然间，消息传来，地球上老虎给伏了（蒋介石给打败了），他们自己虽然牺牲了，但是听到这个好消息，也忍不住要泪洒长空了。
 
@@ -650,9 +630,7 @@
 
 1989年5月8日
 
-
-
-##《新官场现形记》序
+## 《新官场现形记》序
 
 在中国小说史上，清朝晚期的小说，形成了一大特色。特色之一是它的数量惊人。据阿英《晚清小说史》的统计，当时成册的小说，至少在一千种以上；特色之二是它的揭发黑暗。这些数量惊人的小说中，“谴责小说”成为它的主力。据鲁迅《中国小说史略》的观察，八国联军以后，“谴责小说之出特盛……揭发伏藏，显其弊恶，而于时政，严加纠弹。或更扩充，并及风俗。”这些“谴责小说”中，1903年李伯元的《官场现形记》是揭发官场黑暗最有名的一部。
 
@@ -670,9 +648,7 @@
 
 1989年6月11日
 
-
-
-##介绍《国共斗争的见闻》
+## 介绍《国共斗争的见闻》
 
 我过去看香港《九十年代》月刊，看到其中“孟真”写的《国共小识》，一看就知道这是行家写的，但不知道这位行家的真名字。
 
@@ -688,9 +664,7 @@
 
 1990年1月8日深夜
 
-
-
-##《鹰犬将军》新版书后
+## 《鹰犬将军》新版书后
 
 宋希濂将军的自述——《鹰犬将军》—书，是1986年1月在大陆出版的，出书后，承他签题一册送我。1988年7月，我写信给他，建议在台湾出一新版，承他同意。不料好事多磨，一些误解和不如意的其他因素耽搁了出书的速度，拖了一年九个月，才得完成。在我建议出台湾新版时，我的目标就是要在内容上胜过大陆版，“非敢以骄大陆版也，求小异以成大同，复结书缘于两岸耳！”如今台湾新版问世在即，我特写几点，略作表明：
 
@@ -732,9 +706,7 @@
 
 1990年4月9日夜
 
-
-
-##《侍卫官谈蒋介石》题记
+## 《侍卫官谈蒋介石》题记
 
 一个月前印《卫士长谈毛泽东》，一个月后再印《侍卫官谈蒋介石》，无独有偶，善莫大焉。
 
@@ -746,9 +718,7 @@
 
 1990年5月27日
 
-
-
-##梁漱溟和他的《忆往谈旧录》
+## 梁漱溟和他的《忆往谈旧录》
 
 粱漱溟原名焕鼎，字寿铭，广西桂林人，1893年（清光绪十九年）生于北京。他在19岁就加入了同盟会，并任《民国报》编辑兼记者。23岁发表《究元决疑论》，被北京大学校长蔡元培看中，邀他到北大致“印度哲学”，前后七年。36岁任河南村治学院教务长，并接办北平《村治月刊》。38岁在邹平创办“山东乡村建设研究院”，任研究部主任、院长，倡导乡村建设运动。抗战爆发后，任最高国防参议会参议员、国民参政会参政员。48岁与黄炎培、左舜生、张君劢等成立“中国民主政团同盟”，任中央常务委员并赴香港创办民盟机关报《光明报》，任社长。53岁任民盟代表参加政协会议，并以民盟秘书长身份，参与调停国共活动。57岁应邀赴北京，历任第一、二、三、四届全国政协委员，第五、六届全国政协常委。87岁后相继出任中华人民共和国宪法修改委员会委员、中国孔子研究会顾问、中国文化书院院务委员会主席、中国文化书院发展基金会主席等职。1988年死去，活了95岁。
 
@@ -760,9 +730,7 @@
 
 1990年11月15日
 
-
-
-##汪荣祖《章太炎研究》序
+## 汪荣祖《章太炎研究》序
 
 台大历史系老同学汪荣祖是我最佩服的历史学者。在我眼中，成为历史学者除了历史在行外，还得有伟大的正义感。环顾中国，两者兼具的，荣祖要列前茅。证据不必远求，光看这本《章太炎研究》，便可了然。
 
@@ -784,9 +752,7 @@
 
 1991年6月2日，在“中华民国”已亡之台湾，李敖
 
-
-
-##安全局机密文件——《历年办理匪案汇编》序
+## 安全局机密文件——《历年办理匪案汇编》序
 
 我在《蒋宋美龄通奸》（“李敖新刊”②）一书里，收有一篇《共产党李登辉出卖同志的官方证据》，文中提到：共产党李登辉绝非退党近二十年后才“自新”的，事实乃是，他早在做共产党的当时，就“自新”了，他出卖了共产党同志，作为晋身之阶，这在官方秘密出版品中，可以印证。根据国家安全局印“机密”文件《历年办理匪案汇编》第二辑第186页到190页，我们可以看到“匪台湾省工委会台大法学院支部叶城松等叛乱案”，这个案子，共有叶城松（31岁）、张璧坤（30岁）、胡沧霖（31岁）、赖正亮（31岁）、吴玉成（26岁）五人判死刑，在1955年4月29日被枪决。而在“案情摘要”中，第一段赫然就是“叶城松于三十六年10月间，由奸匪李登辉介绍参加匪帮，受杨匪领导，担任台大法学院支部书记”。可见“奸匪李登辉”逍遥法外，事出有因。因为同案中，除五人死刑外，蔡耀景（35岁）判无期，李显章（38岁）、钟茂春（34岁）、池仁致（33岁）、李显玉（28岁）、王新德（21岁）、黄其德（60岁）六人判十年，黄顶（41岁）判七年，黄青松（27岁）判五年，吴长流（64岁）判二年。但原始介绍人“奸匪李登辉”，却未闻有法办之事。由此可见，所有杂志关于李登辉做过共产党的报道，都是捕风捉影的，都提不出来文证。我现在提供官方的文证如上，以证明所谓基督徒、大好人李登辉，其实是个特级犹大和坏蛋！同样是共产党叛徒的蒋经国看中了他，选他为继承人，真是别具“红”眼也！好汉惜好汉、坏蛋惜坏蛋，我们在这些丑史上，终于见识了他们是些什么东西！
 
@@ -907,6 +873,3 @@
 为保持秘密文件原状，这部书，完全以原寸影印方式印制。读者翻阅，更有逼真之感。至于从秘密管道转来这部书的人，目前不能公布名字，书封面上的编号也要挖掉，以确保提供者的安全。虽然做了无名英雄，但仍长在我心，永存感念。
 
 1991年11月12日
-
-
-
