--- a/07.采访序跋类/李敖对话录.md
+++ b/07.采访序跋类/李敖对话录.md
@@ -1,4 +1,8 @@
-#《李敖对话录》目录
+# 李敖对话录
+
+<!-- toc -->
+
+## 目录
 
 * 《李敖对话录》自序
 * 一、才华盖世侠骨柔情的思想家
@@ -22,21 +26,17 @@
 * 十九、《花花公子》访问李敖
 * 二十、书店升天，作者扫地
 
-
-
-##《李敖对话录》自序
+## 《李敖对话录》自序
 
 这本《李敖对话录》，共有二十一篇。收有我1982年到1987年五年间的部分对话。
 
 对话体作品（dialogue）的体裁，最大特色在于它用口语的通俗，表达出质疑、问难和抬杠。在东方最有名的对话录是《论语》；在西方最有名的对话录是《柏拉图对话录》。在柏拉图以前，已早有对话体作品出现，那是公元前5世纪西西里岛的笑剧，由岛上东南部一海港作家——西拉库斯的索夫龙（SophronofSyracuse）写成，柏拉图深受影响。到了2世纪，卢西恩（Lucian）的《死者对话录》问世，更把这种文学体裁赋予新意，对后世的影响，愈来愈大。
 
-对话体作品有两类，一类是实际的对话；一类是虚构的对话。前者像《朱子语类》《歌德对话录》；后者像桑塔亚纳（GeorgeSantayana）的《地狱对话录》（Dialogues	inLimbo）、诸桥辙次的《三圣会谈》。这本《李敖对话录》，两类都用到了，可说是一种别开生面的对话录。读者读来，保证虚实双修、音容宛在，在中国对话录中，胜《论语》《朱子语类》多矣！不敢自谦，特为亲序以张之。
+对话体作品有两类，一类是实际的对话；一类是虚构的对话。前者像《朱子语类》《歌德对话录》；后者像桑塔亚纳（GeorgeSantayana）的《地狱对话录》（Dialogues inLimbo）、诸桥辙次的《三圣会谈》。这本《李敖对话录》，两类都用到了，可说是一种别开生面的对话录。读者读来，保证虚实双修、音容宛在，在中国对话录中，胜《论语》《朱子语类》多矣！不敢自谦，特为亲序以张之。
 
 1988年7月26日
 
-
-
-##才华盖世侠骨柔情的思想家
+## 才华盖世侠骨柔情的思想家
 
 ——访问李敖
 
@@ -264,9 +264,7 @@
 
 李宁访问，1982年3月16日。
 
-
-
-##对是非绝对是不让步的
+## 对是非绝对是不让步的
 
 ——李敖上下古今谈
 
@@ -482,9 +480,7 @@
 
 陈敏访问，1982年3月16日
 
-
-
-##在台大-在法庭
+## 在台大-在法庭
 
 ——李敖访问记
 
@@ -510,9 +506,7 @@
 
 林小鱼访问，1982年3月16日
 
-
-
-##吐他一口痰
+## 吐他一口痰
 
 ——李敖访问记
 
@@ -1134,9 +1128,7 @@
 
 吴文迫策划、李宁整理，1982年6月
 
-
-
-##答陈依玫
+## 答陈依玫
 
 ■您曾是50年代的大学生，我们却是80年代的大学生；三十年的间隔，我们对您当时的大学生活颇为向往，倘若您现在是个80年代的大学生，不知您将如何安排这四年？
 
@@ -1208,9 +1200,7 @@
 
 陈依玫访问，1982年12月20日
 
-
-
-##论国民党的美感
+## 论国民党的美感
 
 ■你最近一再写文章骂政党和个人，是不是太丑化他们了？
 
@@ -1266,9 +1256,7 @@
 
 1983年2月3日
 
-
-
-##我的皮肉生涯
+## 我的皮肉生涯
 
 ■《深耕》杂志被禁一年，你有何感想？
 
@@ -1332,9 +1320,7 @@
 
 1983年3月11日
 
-
-
-##党外人士不够小
+## 党外人士不够小
 
 ■你自称是“奸雄”，你是吗？
 
@@ -1378,9 +1364,7 @@
 
 1983年4月6日，病中。
 
-
-
-##选举问题总解答
+## 选举问题总解答
 
 ■外界盛传你李敖出面操纵这次选举，有没有这回事？
 
@@ -1500,9 +1484,7 @@
 
 1983年11月20日
 
-
-
-##李敖答问之一
+## 李敖答问之一
 
 今推出“大秘密”
 
@@ -1542,9 +1524,7 @@
 
 1984年2月11日
 
-
-
-##李敖答问之二
+## 李敖答问之二
 
 媚骨征候群
 
@@ -1594,9 +1574,7 @@
 
 1984年2月17日
 
-
-
-##李敖答问之三
+## 李敖答问之三
 
 李登辉应先移送警总啊！
 
@@ -1624,9 +1602,7 @@
 
 1984年2月25日晨
 
-
-
-##“却笑英雄‘有’好手，一江春水走曹瞒”
+## “却笑英雄‘有’好手，一江春水走曹瞒”
 
 ■去年的选举结果，使许多人对党外前途深怀隐忧，为什么你倒认为党外是成功的呢？
 
@@ -1828,9 +1804,7 @@
 
 李宁访问，1984年3月
 
-
-
-##台湾最有力量的个人
+## 台湾最有力量的个人
 
 ——李敖每月感慨万千
 
@@ -1962,9 +1936,7 @@
 
 李宁访问，1984年5月
 
-
-
-##给他来个“SevenDown”！
+## 给他来个“SevenDown”！
 
 ——李敖谈党外杂志
 
@@ -2106,9 +2078,7 @@
 
 叶青访问，1984年7月
 
-
-
-##五十而不知天命
+## 五十而不知天命
 
 ——自己访问自己
 
@@ -2738,9 +2708,7 @@
 
 《台湾时报》，1980年1月2日-4日
 
-
-
-##只有作战而死，怎能求情而死
+## 只有作战而死，怎能求情而死
 
 ——访李敖谈“五一九绿色行动”
 
@@ -2844,9 +2812,7 @@
 
 江盖世访问，1986年5月26日
 
-
-
-##光靠龟儿子是不够的
+## 光靠龟儿子是不够的
 
 ——对党外人士失望，对党外并不悲观
 
@@ -2982,9 +2948,7 @@
 
 陈锡福访问，1986年8月11日
 
-
-
-##《花花公子》访问李敖
+## 《花花公子》访问李敖
 
 在台湾知识分子中，李敖最富争论性。自从1961年11月在台湾《文星》杂志发表《老年人和棒子》后，李敖的声名不胫而走，成为向传统知识分子挑战的“全盘西化论”派最尖锐代表。尤其怵目的，便是他以辛辣的文笔，与胡秋原、任卓宣、徐复观等传统文化人掀起轰动一时的文化论战，更大胆地揭露及批判国民党在台湾的统治。
 
@@ -3286,9 +3250,7 @@
 
 1986年10月号香港中文版，有几处笔误，已代为更正，并函告香港
 
-
-
-##书店升天，作者扫地
+## 书店升天，作者扫地
 
 ■6月9日《民生报》文化新闻版头条登出“文星要复业/业刊版权起纠纷/多位名作家涉入/李敖先告蔡文甫”等消息，这消息海外《世界日报》也登了，在消息上报前，文化出版界已经奔走相告，知道暴雨要来了，内情是怎么回事？
 
@@ -3397,6 +3359,3 @@
 □当然，会没有他吗？哈哈，对余光中而言，这回可真的“狼来了”！
 
 1987年6月17日午
-
-
-
