--- a/07.采访序跋类/李敖报刊集.md
+++ b/07.采访序跋类/李敖报刊集.md
@@ -1,4 +1,8 @@
-#《李敖报刊集》目录
+# 李敖报刊集
+
+<!-- toc -->
+
+## 目录
 
 * 一、李敖与“编辑室报告”
 * 二、《文星杂志选集》导言
@@ -19,9 +23,7 @@
 * 十七、《求是报》停刊告白
 * 十八、《李敖求是评论杂志》发刊词
 
-
-
-##李敖与“编辑室报告”
+## 李敖与“编辑室报告”
 
 李敖主编《文星》四年，掀起了一股“文星风云”，每月《文星》出刊，李敖写“编辑室报告”。在“编辑室报告”里面，李敖除了介绍该期《文星》的内容外，更将自己的议论意见利用短短的三字两语表达出来，要了解李敖，这是不可缺少的资料。从“编辑室报告”的字里行间，有心人自可掌握到李敖的精神所在。因此，我在这里把部分“编辑室报告”做了一个大概的分类，给有心人从中找寻宝贵的资料。
 
@@ -413,9 +415,7 @@
 
 〔后记〕李敖后来提醒我，当时有部分“编辑室报告”其实是陆啸钊写的，我因为“不详查”，所以就“陆冠李戴”了。我愿意为这个错误负上全责，但是为了了解“文星风云”的实况，我们也不用太计较作者是谁了。（韩妙玄）
 
-
-
-##《文星杂志选集》导言
+## 《文星杂志选集》导言
 
 1957年11月，《文星》杂志创刊；1965年12月，《文星》杂志被封；共出了九十八期。
 
@@ -439,9 +439,7 @@
 
 1980年1月5日
 
-
-
-##《文星杂志选集》题词
+## 《文星杂志选集》题词
 
 《文星》杂志是三十年来最有深度的杂志，也是最有永恒价值的杂志，政论性的杂志是一时的，思想性的杂志是永久的。《文星》杂志为中国思想趋向求答案，在挖根上苦心焦思、在寻根上慎终追远、在归根上四海一家，定向方面的成绩，至今空前绝后，没有任何杂志赶过它。
 
@@ -449,9 +447,7 @@
 
 1980年1月5日
 
-
-
-##“只要寻一个不受人惑的人”
+## “只要寻一个不受人惑的人”
 
 ——《文星》杂志哀辞
 
@@ -467,9 +463,7 @@
 
 1982年7月1日
 
-
-
-##被封杀的《千秋评论》
+## 被封杀的《千秋评论》
 
 自古功名亦苦辛，行藏终欲付何人？
 
@@ -561,9 +555,7 @@
 
 基于对中国文化的热爱，我反对李敖的大部分言论；基于对民主自由的拥护，我也反对此间部分知识分子对李敖的不宽容态度，以及由这种态度所透示的知识分子本身在认知上的缺憾、判断上的轻率，与道德上的武断，如是而已。
 
-
-
-##《万岁评论》缘起
+## 《万岁评论》缘起
 
 十八年前（1966年），当《文星》杂志被国民党封杀后，在不准登记新报也不准登记新杂志的困境下，我曾计划突破困境的法子，当时我就有了“李敖每月一书”构想，按照钳制言论自由的《出版法》第2条，出版品分为三类：
 
@@ -637,9 +629,7 @@ Studyasifyouweretoliveforever.Liveasifyouweretodietomorrow.（像从今长生那
 
 1984年1月23日
 
-
-
-##挂“千秋”羊头，卖“万岁”狗肉
+## 挂“千秋”羊头，卖“万岁”狗肉
 
 ——《万岁评论》四十期以后
 
@@ -661,9 +651,7 @@ Studyasifyouweretoliveforever.Liveasifyouweretodietomorrow.（像从今长生那
 
 1987年3月23日
 
-
-
-##《千秋评论》一百期期期期期期
+## 《千秋评论》一百期期期期期期
 
 我曾自谓“五十年来和五百年内，中国人写白话文的前三名是李敖，李敖，李敖，嘴巴上骂我吹牛的人，心里都为我供了牌位”。我为什么如此不谦虚？如此写实？原因无他，实在是因为真写得好。并且，写久了，艺高人胆大，大手笔了，文章一下笔，就放得开，愈写就愈恣肆了。例何须远求，就拿这篇文章的题目来论，“《千秋评论》一百期期期期期期”，一个题目，一连六个“期”字摆在一道，这种学问、这种文字、这种章法，古往今来的中国人，哪个敢这样不期而遇？
 
@@ -679,9 +667,7 @@ Studyasifyouweretoliveforever.Liveasifyouweretodietomorrow.（像从今长生那
 
 1989年11月24日
 
-
-
-##《千秋评论》停刊告白
+## 《千秋评论》停刊告白
 
 《千秋评论》（《李敖千秋评论丛书》）第一期是1981年9月出版的；今年（1991）9月，恰满十周年，其中第四十三期分刊成二册，第五十九期、第六十期连号合刊成一册，第一百期分刊成二册，一共一百二十期，总共出了一百二十一册。
 
@@ -701,9 +687,7 @@ Studyasifyouweretoliveforever.Liveasifyouweretodietomorrow.（像从今长生那
 
 1991年9月26日，李敖56岁，在台湾。
 
-
-
-##乌鸦的心愿
+## 乌鸦的心愿
 
 ——《乌鸦评论》发刊词
 
@@ -715,9 +699,7 @@ Studyasifyouweretoliveforever.Liveasifyouweretodietomorrow.（像从今长生那
 
 1988年9月16日
 
-
-
-##《乌鸦评论》休刊告白
+## 《乌鸦评论》休刊告白
 
 一、刚在医院，医生嘱我必须节劳，以免健康出问题。
 
@@ -729,9 +711,7 @@ Studyasifyouweretoliveforever.Liveasifyouweretodietomorrow.（像从今长生那
 
 1989年3月14日
 
-
-
-##《求是报》1991年2月27日创刊
+## 《求是报》1991年2月27日创刊
 
 ——世界报业史上前无古人，东方版西方版同时出版
 
@@ -743,9 +723,7 @@ Studyasifyouweretoliveforever.Liveasifyouweretodietomorrow.（像从今长生那
 
 19至20世纪英国诗人吉卜龄（RudyardKipling）说东方是东方、西方是西方，两者永不交会（Oh，EastisEast，andWestisWest，andneverthetwainshallmeet）。但李敖和他学弟施复华先生合作下，《求是报》打破了英国帝国主义者的断言。
 
-
-
-##一张报，打倒你！
+## 一张报，打倒你！
 
 数中国人中，论藏书之多，李敖第一；藏书之富，李敖第一；藏书之奇，李敖也第一。
 
@@ -785,9 +763,7 @@ Studyasifyouweretoliveforever.Liveasifyouweretodietomorrow.（像从今长生那
 
 1991年1月29日夜深
 
-
-
-##生公说法鬼神听
+## 生公说法鬼神听
 
 唐代诗人刘禹锡有《生公讲堂》诗，全文是：
 
@@ -813,9 +789,7 @@ Studyasifyouweretoliveforever.Liveasifyouweretodietomorrow.（像从今长生那
 
 1991年2月26日
 
-
-
-##《求是报》是知识贵族最便宜的报
+## 《求是报》是知识贵族最便宜的报
 
 由李敖做发行人的《求是报》，决定在1991年2月27日创刊。
 
@@ -835,9 +809,7 @@ Studyasifyouweretoliveforever.Liveasifyouweretodietomorrow.（像从今长生那
 
 1991年1月16日
 
-
-
-##李敖谈《李敖的报纸》
+## 李敖谈《李敖的报纸》
 
 今早在《民众日报》上，看到一篇陈嘉宗先生写的《李敖的报纸》，我不知道“陈嘉宗”是谁，但从文章的用字遣词中，颇可看出他这种人的大脑水平，我想这种水平，也许不止他一位，因此我愿意花点时间，讨论一下。
 
@@ -881,9 +853,7 @@ Studyasifyouweretoliveforever.Liveasifyouweretodietomorrow.（像从今长生那
 
 1991年6月11日下午3时
 
-
-
-##《求是报》停刊告白
+## 《求是报》停刊告白
 
 《求是报》创刊于1991年2月27日，决定停刊于1991年8月20日，共出一百七十二号。半年来的日夜努力与辛苦，至此进入历史。
 
@@ -911,9 +881,7 @@ Studyasifyouweretoliveforever.Liveasifyouweretodietomorrow.（像从今长生那
 
 1991年8月20日
 
-
-
-##《李敖求是评论杂志》发刊词
+## 《李敖求是评论杂志》发刊词
 
 我的《千秋评论》（《李敖千秋评论丛书》）办了十年、《求是报》办了半年，如今双双达成它们历史的、阶段性的使命，我决定创办《李敖求是评论杂志》，以开新猷。
 
@@ -922,6 +890,3 @@ Studyasifyouweretoliveforever.Liveasifyouweretodietomorrow.（像从今长生那
 《李敖求是评论杂志》虽是杂志，但它的使命，在“成一家之言”，一家之言并不是我一言，而是把特立独行之言、震聋醒聩之言、“虽千万人，吾往矣”之言，不论古今、不论中外、不论新旧，都有以召集，形成光束与弹花，为中国开道、为中国人导向。中国人浑蛋浑蛋满天下，上自高等知识分子、衮衮诸公；下至匹夫匹妇、贩夫走卒，滔滔皆是浑蛋、到处都是浑蛋。在这种世风下，第一流的思想家站出来，以实事求是的论证，说点明白话、主持一些公道，这是起码该有的独来独往。《李敖求是评论杂志》就是在这一抱负下创办的。这是全中国唯一一个崇尚真理、全说真话、专讲是非、没有党派的杂志。我敢说，看了它，中国任何刊物都“不够看”、都“何足数”了。——浅人看来，这种开场白有点吹牛；但真正有眼识泰山的人看来，李敖几十年孤军奋斗、呼啸丛林的纪录，岂不都印证了这一事实吗？
 
 1991年10月20日，在中国台湾
-
-
-
