format md in 08

--- a/08.书信函件类/李敖书函集.md
+++ b/08.书信函件类/李敖书函集.md
@@ -1,4 +1,8 @@
-#《李敖书函集》目录
+# 李敖书函集
+
+<!-- toc -->
+
+## 目录
 
 * 一、跟警察头子打笔仗
 * 二、查禁《孙中山研究》的荒谬理由
@@ -48,8 +52,6 @@
 * 四六、你转载我，我转载你
 * 四七、三点不露轮到李登辉了
 * 四八、宋英、黄信介等岂可违反傅正遗愿！
-
-
 
 跟警察头子打笔仗
 
@@ -209,8 +211,6 @@
 
 李敖1987年9月4日
 
-
-
 查禁《孙中山研究》的荒谬理由
 
 ——致颜锦福的信
@@ -234,8 +234,6 @@
 长廷兄代我谢谢他那天请我喝的果汁
 
 敖之1987年9月30日
-
-
 
 给新闻局局长邵玉铭的公开信
 
@@ -327,8 +325,6 @@
 
 李敖1987年10月22日
 
-
-
 许水德请注意
 
 函（也是“最速件”）：1987年10月31日
@@ -354,8 +350,6 @@
 四、为对国民党钳制言论自由有以立即回应，本书除将标题字样保留外，特加出《蒋介石研究四集》一册，在封面上加列“蒋介石卖国！”字样，聊还颜色。盖国民党总理、国民党总裁，都有卖国证据可查，封面上印同样字样，两人固一体适用也。
 
 （三）请依《出版法》第39条“删除禁载”后得“出售及散布”之规定见复，并返还已扣押之出版品，俾可加装新封面上市也。
-
-
 
 致《中报》傅朝枢先生
 
@@ -385,8 +379,6 @@
 
 李敖1987年11月3日
 
-
-
 致施性忠老哥
 
 性忠老哥：
@@ -409,8 +401,6 @@
 
 敖之1987年11月8日3时
 
-
-
 再致施性忠老哥
 
 性忠老哥：
@@ -431,8 +421,6 @@
 
 敖之1987年11月12日午
 
-
-
 三致施性忠老哥
 
 性忠老哥：
@@ -450,8 +438,6 @@
 姬美好，通文、信丰好
 
 敖之1987年11月15日晨4时后
-
-
 
 关于“直笔”的讨论
 
@@ -487,8 +473,6 @@
 
 书七册随信送赠，请查收。
 
-
-
 请检察官辞职
 
 ——致郑忠仁检察官
@@ -508,8 +492,6 @@
 有选择的，倒是你这位检察官先生，11月5日美国《中报》上登：“开侦查庭时，李敖当庭劝告检察官称，假如不能主持正义，就请辞职，并且指出历史上南宋民族英雄岳飞受审时，就有主审法官因良心难安而告辞职。”我真心盼先生不同流合污，不让司法给政治利用。是流芳、是遗臭，全靠先生智者的一择。
 
 李敖1987年11月24日
-
-
 
 从小事看认真
 
@@ -619,8 +601,6 @@
 
 三、我要求我13日的信和这封信，一并随同你们的会议记录分发各住户。我为大厦担任职务，本来就是纯义务性质，所以能为大家省钱的，我都省，过去调查报告是我自费印的、电铃是我送的……这次随会议记录附送我这两封信，当然也全由我自费。
 
-
-
 复李声庭
 
 声庭先生：
@@ -632,8 +612,6 @@
 我计划新办一个杂志，内容综合过去《文星》之长，而“百尺竿头”之，你如愿写通俗一点的新作，极为欢迎。总之，吾辈先知先觉，实不愿坐视过去的努力，如今被举岛若狂的浅盘所毁，也不甘坐视无识无知的人乱搞一通也。
 
 敖之1988年3月31日
-
-
 
 复李杰四弟
 
@@ -652,8 +630,6 @@
 六叔及府上各位请安
 
 敖哥1988年4月16日
-
-
 
 复六叔
 
@@ -675,8 +651,6 @@
 
 小敖敬上1988年5月19日
 
-
-
 致余纪忠
 
 纪忠先生：
@@ -688,8 +662,6 @@
 四年前，为我与萧孟能讼案平衡报道事，曾向志信兄转达微意，承蒙先生转告以一旦水落石出，《中国时报》自当公道处理。顷接最高法院终审判决，八年前萧孟能告我之事，已确定诬告属实，萧孟能不日即将第三度入狱矣！我回首前尘，特以专信给贵报，请求依《出版法》及新闻记者信条刊出，聊补当年名誉受损于万一也。特此奉闻先生，敬烦德便至感。此请双安
 
 李敖1988年8月10日
-
-
 
 迟来的澄清
 
@@ -718,8 +690,6 @@
 虽然三推事造成了李敖的冤狱，但是李敖并没有对司法全盘失望。八年来，先后有陈联欢、谢俊峰、葛浩坡、李文成、陶振声、刘为育、吴敦、叶百修、钟惠臣、杨荣、陈石狮、黄炎成、李琼荫、陈昆辉、刘焕宇、郑有田、陈计男、李锦丰、孙森焱、林耀邦、范秉阁、吕潮泽、林奇福、杨仁寿、马元枢、杨秉钺、陈培基、许执、李相助、钟日成、施文仁、罗一宇、童有德、廖茂荣、郑汉龙、张祥麟、蔡诗文、蔡锦河、李星石、黄明霈、吴纯、陈正庸、杨贵志、黄雅卿、何惠民、郭柏成、纪俊乾四十八位推事，都曾在不肯草率冤曲李敖上，公正做过审理，特此指出，以表示对司法恢复部分信心。另外值得一提的是：三推事中的黄剑青，在调升到最高法院后，在证明萧孟能诬告的流程中，也做过对萧孟能不利的判决。也许黄剑青在补救他在高院时对李敖的误判，如果这样，那么司法就更令人鼓舞了。
 
 李敖1988年8月10日
-
-
 
 《乌鸦评论》及其他
 
@@ -821,8 +791,6 @@ ps您签名时依您旁边者可是苏荣泉先生？请代问好。
 
 李敖1989年4月22日晨
 
-
-
 给邻居的一封信
 
 金兰大厦各位邻居：
@@ -885,8 +853,6 @@ E、F/51927/52594.50/-667.50/32833/4400/7881/1507/4666/1306.50
 
 〔后记〕这封信发出后，金兰大厦邻居全体“投降”，最后以皆大欢喜收场。我发表这封信，目的在告诉人们，我李敖做事，不论大小，一律认真以赴。（请参看“千秋评论”第八十四期我的《从小事看认真》一文）
 
-
-
 致沈醉
 
 沈醉先生：
@@ -898,8 +864,6 @@ E、F/51927/52594.50/-667.50/32833/4400/7881/1507/4666/1306.50
 大安
 
 李敖1989年8月27日
-
-
 
 斥台中一中校长陈继统
 
@@ -925,8 +889,6 @@ E、F/51927/52594.50/-667.50/32833/4400/7881/1507/4666/1306.50
 
 李敖1989年10月19日
 
-
-
 质问《自由时报》
 
 吴发行人阿明、颜社长文闩先生：
@@ -942,8 +904,6 @@ E、F/51927/52594.50/-667.50/32833/4400/7881/1507/4666/1306.50
 贵报先在副刊上，对我屡次做不实报道与评述，已于《新闻记者信条》第1条、第2条、第4条、第5条、第8条、第10条、第11条有亏；亦与《报业道德规范》第2项、第4项不合，令人厌恶。如今变本加厉，在第二版上又故态复萌，且涉及我生平“只拥抱美女，不拥抱大官”的立身本末、清誉与大节，实在忍不住要写这封信。请即按《出版法》第15条“于接到要求后三日内更正，或登载辩驳书”之规定，惠予一字不改，刊出此信全文，并按同条“更正或辩驳书之登载，其版面应与原文所载者相同”处理。
 
 李敖1989年10月28日
-
-
 
 致台北市政府新闻处
 
@@ -975,8 +935,6 @@ E、F/51927/52594.50/-667.50/32833/4400/7881/1507/4666/1306.50
 
 李敖1989年11月1日
 
-
-
 致新闻评议会
 
 受文者：新闻评议会
@@ -1005,8 +963,6 @@ E、F/51927/52594.50/-667.50/32833/4400/7881/1507/4666/1306.50
 
 李敖1989年11月1日
 
-
-
 再致新闻评议会
 
 受文者：新闻评议会
@@ -1029,8 +985,6 @@ E、F/51927/52594.50/-667.50/32833/4400/7881/1507/4666/1306.50
 
 李敖1989年11月12日
 
-
-
 吴树民请注意
 
 一、贵报于今日刊出以“李敖登广告，指出……郑南榕曾揭发林正杰‘恶行’”的报道，只单方面登出对方的，而没登出直接向李敖查证的，有违新闻工作者平衡报道的原则，请即依《新闻记者信条》《报业道德规范》，及《出版法》第15条的规定，一字不改，于原版面登出此辩驳书。
@@ -1044,8 +998,6 @@ E、F/51927/52594.50/-667.50/32833/4400/7881/1507/4666/1306.50
 《自立早报》发行人吴树民先生
 
 李敖1989年11月29日上午
-
-
 
 花老犹见燕归迟
 
@@ -1069,8 +1021,6 @@ E、F/51927/52594.50/-667.50/32833/4400/7881/1507/4666/1306.50
 
 李敖1990年5月17日
 
-
-
 寄傅在峰
 
 在峰：
@@ -1082,8 +1032,6 @@ E、F/51927/52594.50/-667.50/32833/4400/7881/1507/4666/1306.50
 李敖1990年5月18日
 
 竹筒饭味道不错。竹筒洗后却已变形，也许是室内吸潮机的功能怪异之故。
-
-
 
 又找台北市政府新闻处的麻烦了！
 
@@ -1109,8 +1057,6 @@ E、F/51927/52594.50/-667.50/32833/4400/7881/1507/4666/1306.50
 
 李敖1990年8月14日
 
-
-
 又找新闻评议会的麻烦了！
 
 受文者：新闻评议会
@@ -1131,8 +1077,6 @@ E、F/51927/52594.50/-667.50/32833/4400/7881/1507/4666/1306.50
 
 李敖1990年8月14日
 
-
-
 蒋纬国不妨一看
 
 宏俊老弟：
@@ -1148,8 +1092,6 @@ E、F/51927/52594.50/-667.50/32833/4400/7881/1507/4666/1306.50
 惠璇，她是我看到的最伟大的太太，跟丈夫上天下地，任劳任怨，在所不辞。
 
 李敖1990年9月18日夜
-
-
 
 中央研究院史语所岂可掩护李济、许倬云！
 
@@ -1223,8 +1165,6 @@ E、F/51927/52594.50/-667.50/32833/4400/7881/1507/4666/1306.50
 
 1990年10月15日
 
-
-
 书而不展，还叫什么书展？
 
 函：1990年12月24日
@@ -1251,8 +1191,6 @@ E、F/51927/52594.50/-667.50/32833/4400/7881/1507/4666/1306.50
 
 （本函由李敖代写）
 
-
-
 休做台北落荒人，应做云南望乡鬼
 
 大姐：
@@ -1277,8 +1215,6 @@ E、F/51927/52594.50/-667.50/32833/4400/7881/1507/4666/1306.50
 
 敖之1991年1月4日
 
-
-
 “碧云应继魏忠贤”
 
 荣祖兄：
@@ -1301,8 +1237,6 @@ E、F/51927/52594.50/-667.50/32833/4400/7881/1507/4666/1306.50
 
 敖之1991年1月10日晨
 
-
-
 吴敦义请勿“有屁一同”
 
 敦义市长学弟大鉴：
@@ -1314,8 +1248,6 @@ E、F/51927/52594.50/-667.50/32833/4400/7881/1507/4666/1306.50
 査贵高雄市政府，前因悍然违法动我的书手脚，被我逮住，提出赔偿，业经贵府道歉、惩凶、赔款在案（1987年5月9日）。如今又故态复萌，其严重性，有甚于四年前者。因为当时毕竟还是戒严时期，如今已是解严假相泓漫之日，贵衙门倒行逆施，其丢人现眼，自更腾笑中外。特写此信，对学弟专予警告，除将三书恢复参展于书架上外，并向我及李敖出版社书面谢罪。否则吾弟及贵衙将永无宁日，你的小平头也将愈搔愈短了。
 
 学兄李敖1991年1月15日
-
-
 
 天天是秋后
 
@@ -1334,8 +1266,6 @@ E、F/51927/52594.50/-667.50/32833/4400/7881/1507/4666/1306.50
 大好
 
 李敖1991年2月21日
-
-
 
 答辅大女学生
 
@@ -1383,8 +1313,6 @@ E、F/51927/52594.50/-667.50/32833/4400/7881/1507/4666/1306.50
 
 李敖1991年4月24日
 
-
-
 答胡虚一老兄书
 
 虚一老兄：
@@ -1427,8 +1355,6 @@ E、F/51927/52594.50/-667.50/32833/4400/7881/1507/4666/1306.50
 
 弟胡虚一敬拜上1990年3月21日清晨
 
-
-
 给叶菊兰的公开信
 
 ——林正杰又“背信毁诺”了！
@@ -1452,8 +1378,6 @@ E、F/51927/52594.50/-667.50/32833/4400/7881/1507/4666/1306.50
 竹梅及伯父母均请问好
 
 敖之1991年5月10日午
-
-
 
 打官司的讨论
 
@@ -1601,8 +1525,6 @@ E、F/51927/52594.50/-667.50/32833/4400/7881/1507/4666/1306.50
 
 李敖1991年6月10日上午
 
-
-
 胡秋原诽谤李敖，被判处拘役四十天
 
 5月30日，我写了一封信给有三十年历史的台湾各报，全信如下：
@@ -1639,8 +1561,6 @@ XX报社
 
 1991年5月30日
 
-
-
 致郝柏村先生一封信
 
 本月3日国民党行政院长郝柏村举行记者招待会，招待出纰漏，《求是报》发行人李敖特严词写信给这老军头，全文如下：
@@ -1660,8 +1580,6 @@ XX报社
 四、我是《求是报》的发行人，独来独往，绝不稀罕参加你的记者招待会，但参不参加是我的事，我却有权质问你。特写此信，请追查见复为荷。
 
 李敖1991年6月6日
-
-
 
 打官司的再讨论
 
@@ -1711,8 +1629,6 @@ XX报社
 
 李敖1991年6月13日午
 
-
-
 讨论《北京法源寺》
 
 一郭启元致李敖
@@ -1761,8 +1677,6 @@ XX报社
 
 李敖1991年6月13日
 
-
-
 比较“鸡巴学”答美国佬
 
 一梅维恒（美国佬）致李敖
@@ -1794,8 +1708,6 @@ Philadelphia
 你奇怪Massage为何翻成“马杀鸡”，这在台湾是译音。若究其义，亦可解释为：“马”者，马子（女孩）也；“杀”者，欲仙欲死使你痛快也；“鸡”者，鸡巴或有鸡巴者也。可见被汉字骗了的，是你们洋鬼子。维恒小弟，汝知之乎？
 
 李敖1991年6月20日午后
-
-
 
 你转载我，我转载你
 
@@ -1830,8 +1742,6 @@ Philadelphia
 敖之1991年6月22日晨
 
 所赠林美人照片已收到，只是太肥了一点，清气已散，无复当年。美女经不得折腾，由此可见！不过，上月20日晚上，我买面包路过远东公司地下室，却碰到一人与我招手，此人非他，胡茵梦也。她虽只比林美人大一岁，但清气尚未全散，与过去造型变化亦不如林美人那样大，足证贵同乡“残菊犹有傲霜枝”，足为东北人经折腾添一新证也。
-
-
 
 三点不露轮到李登辉了
 
@@ -1878,8 +1788,6 @@ Philadelphia
 大安
 
 李敖1991年7月28日
-
-
 
 宋英、黄信介等岂可违反傅正遗愿！
 
@@ -1938,6 +1846,3 @@ Philadelphia
 大安
 
 敖之1991年7月29日午
-
-
-
