--- a/08.书信函件类/李敖书札集.md
+++ b/08.书信函件类/李敖书札集.md
@@ -1,4 +1,8 @@
-#《李敖书札集》目录
+# 李敖书札集
+
+<!-- toc -->
+
+## 目录
 
 * 一、致管区警察头子书
 * 二、讨老婆的一个新害处
@@ -36,8 +40,6 @@
 * 三四、“有谁跌倒，我不焦急呢？”
 * 三五、给“雷震之女”的一封信
 
-
-
 致管区警察头子书
 
 信义路派出所主管先生：
@@ -57,8 +59,6 @@
 李敖1982年11月26日
 
 〔跋〕1982年11月28日，管区转告说信今天收到，纯属误会，李先生多心了。请李先生把身份证留在大厦柜台即可，他们即来补为校正无误云云。这一答复，证明了这个岛上的公务员并非不会改正他们的错误，当他们知过能改的时候，我们应该夸奖他们。
-
-
 
 讨老婆的一个新害处
 
@@ -312,8 +312,6 @@
 
 敖之1982年11月29夜一时半
 
-
-
 茅坑里的石头与厕所里的花瓶
 
 廖权兄：
@@ -376,8 +374,6 @@
 
 李敖1982年12月2日夜一时半
 
-
-
 假戏真做与假戏假做
 
 史通弟：
@@ -403,8 +399,6 @@
 一个人，完全靠群众的掌声来过活的，很少不是虚假的。人都难免有虚假的时候，但是，明星和政客却无时无刻不显出虚假（唯一例外大概只有上厕所，大便不通，涨得满脸通红的时候）。十目所视、十手所指，又安能不虚假？干这两行的人，想来也太可悲了。至于明星谈政治、政客拉拢明星，那更是假中之假，除了假戏假做，什么也看不到了。
 
 敖哥1982年12月3日夜1时20分
-
-
 
 我们要有批评党外的自由
 
@@ -438,8 +432,6 @@
 
 李敖1982年12月11日夜，写山居杂诗四绝
 
-
-
 论“影子政权”
 
 小魏和新娘子：
@@ -455,8 +447,6 @@
 廷朝以自己被“关”的方法感觉自己存在，你们的小千金以自己被“爱”的方法感觉自己存在（这当然是儿童心理学的疑案），你们以“桃园帮”的方法感觉自己存在，我呢？今天至少以“李大哥”的方法感觉自己存在。写这封信，表示我是真正老大，不是吗？哈！
 
 李大哥1982年12月18日
-
-
 
 学者名流与公帑
 
@@ -489,8 +479,6 @@
 钱穆和林语堂都是所谓读书人，整天仁义道德，但是做起事情来，却如此公私不分，这可未免太恶心人了吧？我真不知道这是哪一国的“归去来兮”？陶渊明死而有知，真要为这种公费的“归去来兮”一气而入桃花源了。不，不对，现代的桃花源，在台湾也不会有了。试看这一阵子的“锡安山事件”，就思过半矣！
 
 李大哥1983年1月18日
-
-
 
 给黄少谷先生的又一公开信
 
@@ -642,8 +630,6 @@
 
 (11)见⑨。
 
-
-
 志在搅局
 
 世煜、慧玲：
@@ -690,8 +676,6 @@ Isn'tthatthemusicianyoufiredyesterday?
 
 又：今早电视新闻报道：自玻利维亚引渡到法国的前纳粹“里昂屠夫”，已被关进四十年前他关别人的监狱。以色列表示，愿意提供这个刽子手更多的当年作恶的铁证，以供法国参考。人间“报应”，得在四十年后不爽，足见敌我双方，都不可不“长寿似乌龟”也！
 
-
-
 不要凭借已成的势力
 
 信疆：
@@ -718,8 +702,6 @@ Isn'tthatthemusicianyoufiredyesterday?
 
 〔附记〕信寄出后，我觉得有五点要说明一下：一、“老是避而不见”当然不是对信疆个人，是我“隐而不退”以后对老朋友的惯技；二、信疆在“中国新闻史上划时代的地位”，我有《副不副，副哉？副哉？》长文，收在《李敖全集》第四册里；三、“房屋”“汽车”“劳力士”，是以具体写抽象，实际上并无此事，余纪忠笼络信疆这种理想挂帅的年轻人，又何须用世俗的手段？对人才，余纪忠精于赏识的眼光和勇于提拔的手笔，在台湾无出其右。信疆对之，也有知己之情，并且不计浮沉，忠心到底。但是余式伯乐，是小伯乐、是机会主义的伯乐，所以情随事迁，感慨系之矣！我跟信疆“挑拨”过，我说：“别以为他们的报对我们多好吧！别忘了这些报根本就该是我们的！国民党如果开放报禁，准人民办报、准我们办报，他们早都垮台，要去穿球鞋了。根本是我们的，而被他们抢去的，我们该用这种气魄来看和他们的关系才对。”这种气魄，也正是今日青年所缺乏的，今日青年被上一代压迫得太久了，只会手心向上而不会翻掌一扑了，受制于人而不以为异也不思其反，这真是大悲剧了！四、“捡到篮里就是菜”也有好处，可以不择细土而成其大，并且挟带私货入境。李敖能上《中国时报》，非私货而何？五、信疆大哥信郑是我老友，所以我对信疆的袒护和责备，都是旧式大哥式的。我可以欺负信疆，但别人欺负他，我就要警告，此正所谓大哥也！
 
-
-
 国民党与豹
 
 绍唐大哥：
@@ -745,8 +727,6 @@ Isn'tthatthemusicianyoufiredyesterday?
 问大嫂和你好，并请代问英惠、贤次好。
 
 敖之1983年2月27日
-
-
 
 要舍得骂自己人
 
@@ -814,8 +794,6 @@ Isn'tthatthemusicianyoufiredyesterday?
 
 李大哥1983年3月20日午
 
-
-
 给孙运璿先生的公开信
 
 运璿先生：
@@ -836,8 +814,6 @@ Isn'tthatthemusicianyoufiredyesterday?
 
 李敖1983年3月28日
 
-
-
 写出中华儿女真的血泪
 
 正杰：
@@ -855,8 +831,6 @@ Isn'tthatthemusicianyoufiredyesterday?
 花两天写这篇文章，写得手都痛了。原子笔、钢笔、毛笔连番更换，以使手稍变化姿势，李某人真有一手，此之谓也！
 
 李大哥1983年4月21日
-
-
 
 林洋港与应召女郎
 
@@ -1020,8 +994,6 @@ Isn'tthatthemusicianyoufiredyesterday?
 
 李敖1983年5月12日，在四所警察局包庇的阳明山大违建被拆除声中，写于阳明山。
 
-
-
 我很刁
 
 《前进》诸巨头同鉴：
@@ -1043,8 +1015,6 @@ Isn'tthatthemusicianyoufiredyesterday?
 我知道我使你们头痛，我很刁，但这正是我的长处。我在是非之争上，极为放刁；真理所在，绝不饶人。我活了这么老，还能不乡愿，还能心直口快、侠骨柔情，正因为我又多情又认真又厉害的缘故。而你们这些小朋友，却有年纪愈大愈心平气和的危险，你们真不可不注意。在这世界上，不会有像我这样的人，这样倚老卖老大模大样的教训你们了，你们应该庆幸有此逆耳之忠言。我的忠言中，有一个大缺点，是过分自大，不过当你们知道我的确如此大大大，就见大不大了！
 
 李大哥1983年5月19日
-
-
 
 君子之爱与细人之爱
 
@@ -1078,8 +1048,6 @@ Isn'tthatthemusicianyoufiredyesterday?
 
 敖之1983年5月19日
 
-
-
 射鬼箭
 
 《前进》社诸男君子女君子：
@@ -1091,8 +1059,6 @@ Isn'tthatthemusicianyoufiredyesterday?
 好了，玩笑开过。你们涉嫌为党外后援团批评苏秋镇，你们太犯本位主义的毛病。后援团立意固佳，但是这样子搞法，我看它制造的问题会比它解决的更多。最主要的原因在你们在推动前太忽略了山头势力，党外能有今天，哪个不是自拥山头来的？形成山头势力不是坏事，是强者自处自保之道。消灭山头要在天下大定之后，而非在群雄逐鹿之时，若现在就想消灭山头，哪个山头会服你？何况你们主事者一一也是山头人物，大家地丑德齐，你们又何能自居党中央而代人越俎？所以目前不怕各自为政，而怕各自的山头太小，此时此刻，山头不足为害也。“大思想家”高见如此，你们以为如何？
 
 李大哥1983年5月26日
-
-
 
 几个主题的讨论
 
@@ -1197,8 +1163,6 @@ PS.最近几期我老登您发表过的文章。您肯在10日以前给我一篇
 你和新娘子好
 
 敖之1983年6月8日午
-
-
 
 惭愧是不够的！
 
@@ -1310,8 +1274,6 @@ PS.最近几期我老登您发表过的文章。您肯在10日以前给我一篇
 
 李大哥1983年6月21日在山之腰
 
-
-
 致正杰
 
 正杰：
@@ -1352,8 +1314,6 @@ PS.最近几期我老登您发表过的文章。您肯在10日以前给我一篇
 
 李大哥切嘱1983年6月23日午
 
-
-
 多革了的一点命
 
 ——给严家淦先生的一封信
@@ -1387,8 +1347,6 @@ PS.最近几期我老登您发表过的文章。您肯在10日以前给我一篇
 看了贵党对禁书问题处理的倒行逆施，家淦先生，我真妄想你们在推翻满清之时，实在该少推翻几样、少革几点命，你们总该在复兴中华文化的兴奋过后，真的复兴一点禁书文化吧？
 
 李敖1983年7月21日
-
-
 
 “体外射精”的一些成绩
 
@@ -1486,8 +1444,6 @@ PS.最近几期我老登您发表过的文章。您肯在10日以前给我一篇
 
 由于我们与李敖对政治问题取得共识，李敖与我们的长期合作才得以展开。这是任重道远的一条路。李敖和我们都不是疯子，也不是偏激分子，而是“知其不可为而为之”的“烈士”。我们不仅耕耘，也要求耕耘的果实——但这份果实不一定要由我们分享。
 
-
-
 “一字师”还敢否？
 
 荣水总座吾弟早安：
@@ -1515,8 +1471,6 @@ PS.最近几期我老登您发表过的文章。您肯在10日以前给我一篇
 国民党可以作假、专断，但是党外一定要诚实、民主。我希望所有后援会成员严肃体认本身的历史责任，以道德勇气与良知，来绝对维护后援会的尊严。
 
 《民主人》杂志社总编辑邓维贤敬上9月5日
-
-
 
 他妈的等死了一个
 
@@ -1550,8 +1504,6 @@ PS.最近几期我老登您发表过的文章。您肯在10日以前给我一篇
 
 李大哥1983年9月16-17日
 
-
-
 公然放行的役男
 
 正杰：
@@ -1569,8 +1521,6 @@ PS.最近几期我老登您发表过的文章。您肯在10日以前给我一篇
 十七岁的役男可以这样公然放行，呜呼国民党的兵役制度！呜呼国民党的出境制度！呜呼国民党口口声声的“真平等”！
 
 李大哥1983年9月18日
-
-
 
 给方素敏的一封信
 
@@ -1694,8 +1644,6 @@ PS.最近几期我老登您发表过的文章。您肯在10日以前给我一篇
 
 她要化仇恨为爱！（《民主人》1983年11月16日）
 
-
-
 会计学上的新成本
 
 菊人兄：
@@ -1732,8 +1680,6 @@ PS.最近几期我老登您发表过的文章。您肯在10日以前给我一篇
 
 敖之1983年11月1日
 
-
-
 老孟老孟，你说是否？
 
 老孟绝子祥柯委座：
@@ -1752,8 +1698,6 @@ PS.最近几期我老登您发表过的文章。您肯在10日以前给我一篇
 
 敖之1983年11月8日
 
-
-
 病中做工
 
 维贤：
@@ -1765,8 +1709,6 @@ PS.最近几期我老登您发表过的文章。您肯在10日以前给我一篇
 这阵子又病又累，又做工不停，人生如是，方有意义。
 
 敖之1983年11月20日
-
-
 
 “不要动”与“快半拍”
 
@@ -1892,8 +1834,6 @@ PS.最近几期我老登您发表过的文章。您肯在10日以前给我一篇
 
 敖哥1983年11月23日
 
-
-
 上县太爷书
 
 石城县太爷：
@@ -1924,8 +1864,6 @@ PS.最近几期我老登您发表过的文章。您肯在10日以前给我一篇
 
 李敖1983年11月29日晨2时
 
-
-
 宾馆、牢房与猪鬃
 
 菊人兄：
@@ -1949,8 +1887,6 @@ PS.最近几期我老登您发表过的文章。您肯在10日以前给我一篇
 从钱复这一谈话里，我们依稀看出了国民党真正恐惧的，到底是什么了！“三通”不“三通”，真正的关键，意在斯乎？
 
 〔附记〕今天《联合报》上说立法委员候选人“雷渝齐讲弹性外交，强调无分大事小事。他举了‘反共猪鬃’的例：有位小商人来找他，说是从香港进口一批猪鬃，被认为系‘匪货’而予销毁，海关人员的理由是香港不可能有这么多猪，这些猪鬃必系‘匪货’。雷渝齐认为人从大陆逃出来，算是‘反共义士’，这些猪鬃何不能视为‘反共猪鬃’而予放行。”这个谑画了的故事，正好说明了国民党的不“三通”困境，已经到了何种地步，真是愈来愈好玩了！（1983年12月1日夜）
-
-
 
 “有谁跌倒，我不焦急呢？”
 
@@ -1992,8 +1928,6 @@ PS.最近几期我老登您发表过的文章。您肯在10日以前给我一篇
 
 李敖1983年12月9日下午
 
-
-
 给“雷震之女”的一封信
 
 美琳：
@@ -2018,6 +1952,3 @@ PS.最近几期我老登您发表过的文章。您肯在10日以前给我一篇
 李敖1984年2月21日晨
 
 附：有关梁启超的女儿发扬幽光潜德的文证二纸，供参考。
-
-
-
