--- a/08.书信函件类/李敖书牍集.md
+++ b/08.书信函件类/李敖书牍集.md
@@ -1,4 +1,8 @@
-#《李敖书牍集》目录
+# 李敖书牍集
+
+<!-- toc -->
+
+## 目录
 
 * 一、责备吴大猷先生
 * 二、银纸包个臭皮蛋
@@ -38,8 +42,6 @@
 * 三六、盗贼政府
 * 三七、给吴三连的预告信
 
-
-
 责备吴大猷先生
 
 大猷先生：
@@ -66,8 +68,6 @@
 
 李敖1986年9月9日夜1时40分
 
-
-
 银纸包个臭皮蛋
 
 ——给王荣文的信
@@ -87,8 +87,6 @@
 源远流长、财源滚滚
 
 敖之1986年9月16日
-
-
 
 直线前进对，周而复始错
 
@@ -114,8 +112,6 @@
 
 〔附记〕王尚勤的书，1985年4月新华书店北京发行所发行，中国友谊出版公司出版。
 
-
-
 来回带物法
 
 ——给沈登恩的信
@@ -131,8 +127,6 @@
 还有，你找我帮忙，可要先想想汤玛斯曼的故事。汤玛斯曼初到纽约，从他的出版家的书店出来，看到货车司机正在搬一大箱书，他想这些书也许是他写的，就跑过去帮忙，跟司机折腾了半天，可是搬不出个所以然来，他喘着气说：“看来没法子把它搬上车了。”“搬上车？”司机大叫，“我是要搬下车呀！”——请名家帮忙，下场往往如此！
 
 敖之1986年10月12日
-
-
 
 贵市长言而无信，令人羞羞
 
@@ -164,8 +158,6 @@
 
 附件：警员胡鹏翔手写查扣单影本。
 
-
-
 “惭愧公荣文王”
 
 荣文：
@@ -179,8 +171,6 @@
 总之，“古典李敖”“当代李敖”“未来李敖”的分期是你喊出来的，如今你若不能千方百计争取到“未来李敖”的出版，只能在历史上和金钱上证明你没有持续性的眼光（过去你有这种眼光，并且是第一，还发了大财），有朝一日，你会后悔。看了你开来的草约，简直把我跟“别的作者”一般看（当然你预付一万本版税，算是“小账加一”），真觉得你不是过去的王荣文了。近墨者黑，大概你的功利版《资治通鉴》看得太多了。将来你死了，我给你铸像，铸得一定比关公的脸还红，上注——“惭愧公荣文王”，以为炯戒也。
 
 李敖1986年11月3日
-
-
 
 左奶、右奶、査禁哪只奶？
 
@@ -201,8 +191,6 @@
 京育吾弟：如果查禁标准无他，只在你李敖文章为祸甚于鲁迅之故，那我就会大笑，予欲无言。否则的话，还是请网开多面，不要再因“支左”而给大家看笑话也！
 
 学兄李敖手启1986年11月7日晨
-
-
 
 从五大臣到八大臣
 
@@ -235,8 +223,6 @@
 你们小两口大好
 
 敖之1986年11月12日夜
-
-
 
 与朋友交，其写信乎？
 
@@ -280,8 +266,6 @@
 
 李敖1986年11月14夜
 
-
-
 天行有常
 
 ——致妇产科医生林永丰
@@ -301,8 +285,6 @@
 希望这两个故事和这一番阐述，能够使你在“小人之匈匈”“小人计其功”的打击中，毫无挫败之感，仍旧“永丰有常”！
 
 敖之1986年11月23日夜12时
-
-
 
 给俞济时将军一封信
 
@@ -374,8 +356,6 @@
 
 〔附记〕附赠《蒋介石研究》一册，盼先生就求真观点，惠予指教
 
-
-
 “财神爷”的悄悄话
 
 维桢：
@@ -395,8 +375,6 @@
 敖之1986年12月12日
 
 我的汽车已经卖掉五年了，今年8月2日的美国《中报》上，登有高墉写的一篇《李敖的是非功过》，还造谣说我“住林肯大厦顶楼，出门乘卡迪拉克，有司机开车”云云，我什么时候住过“林肯大厦顶楼”了？什么时候有“司机开车”了？这些无聊文人和无聊报人直到今天还造我是“财神爷”的谣，你说好不好笑？
-
-
 
 给沈登恩信中的几段
 
@@ -425,8 +403,6 @@
 “主席”好
 
 敖之1986年12月13日
-
-
 
 “不提李敖之名”记趣
 
@@ -482,8 +458,6 @@
 
 敖之1986年12月15日
 
-
-
 请台北市政府新闻处答复
 
 函：1986年12月27日
@@ -507,8 +481,6 @@
 五、若说该书刊之出版，只是康文雄以个人名义出任“发行人”，属于《出版法》第21条“个人所出版之书籍”，自不受《出版法》第二条新闻纸类之约束，此种说法，亦不能成立。因为该书刊内容，并非康文雄个人著作，康文雄且在12月20日地方法院1986年自字第1357号案中庭供他只是“挂名发行人”“从不过问编务”。依法发行他人著作须先依《出版法》第16条申请登记，但康文雄并未经这一程序登记。如今该书刊发行已近半年，未见贵处依法处理，今请答复。此其五。
 
 六、查该书刊丑化李敖，事证至明。贵处对李敖批评国民党之书，无一不禁；对此种丑化李敖之书，却非法纵容、配合此种“党外”打击党外前辈，用心至为可疑。特提出以上五点，即请答复为何。
-
-
 
 有关《自立晚报》的函与状
 
@@ -536,8 +508,6 @@
 
 被告吴三连、吴丰山、颜文闩分别是《自立晚报》发行人、社长、总编辑。在10月22日《自立晚报》上，登出大幅“李敖死了”广告，并附以李敖是“水蛭”等文字，妨害李敖名誉及信用。广告登出后，李敖曾去信提出《新闻记者信条》第7条和《报业道德规范》第7项，根据这些信条和规范，明定这种不真而伪、不良而莠、使读者受欺受害的广告不能刊登，并请他们解释。并问被告吴三连等：他们若自反不缩，试问若有人援例送来“吴三连死了”“吴丰山死了”等广告，乃至“蒋宋美龄死了”“蒋经国死了”等广告，是否也一视同仁，照样勇于刊登？不料去信以后，他们悍然不理。此种行径，在道德上，有违《新闻记者信条》和《报业道德规范》；在法律上，构成加重诽谤罪，都至为明确。被告吴祥辉为“李敖死了”作者，自应一并涉嫌。特依法自诉，请惠为审理，科以应得之刑。
 
-
-
 是人告人，不是党外告党外
 
 月娇女士：
@@ -556,8 +526,6 @@
 
 李敖1987年1月13日
 
-
-
 “要埋单”
 
 ——答李世杰先生
@@ -571,8 +539,6 @@
 自来难友苦黑狱久矣，但出狱以后，人人不是不能写，就是不敢写。这种态度，其实也无异是对国民党黑暗统治的一种变相姑息或纵容。相对起来，我们这些能写也敢写的，自然就属难能胆敢了。我总觉得我们这些劫后余生的难友们，如今奋笔所为，无非是清算国民党的黑暗统治，要跟这种统治算一笔清账。广东话有所谓“埋单”，这话流传到台湾，变成“买单”，意指饭后结账。事实上，乃指结账后账单一张压一张埋入其中之意。它的原始意义是替人办身后事，所以代人付账“要埋单”，也就可引喻为代人办丧事。国特宗荣禄回忆录中说他来台湾前，约他山西老乡朱伟霖教授一起来，宋教授责备他说：“国民党已寿终正寖，你还想亲视含殓。”我们这些难友们，都不幸沦为“亲视含殓”者流，说来对生命也是一种浪费，但是既然阴错阳差如此，也就干脆大大“要埋单”一番，以出鸟气而张大义了。亨利老兄奋笔之余，必太息吾言。
 
 敖之1987年1月19夜
-
-
 
 律师-正义-缩
 
@@ -589,8 +555,6 @@
 进步
 
 李敖1987年2月14日
-
-
 
 从肚皮到头皮
 
@@ -613,8 +577,6 @@
 昨天在火车上读明嘉靖甲午（1534）年版《惠安县志》中有一段写贵乡乡风说：“性善弱忍，事少争讼，或不得已至讼，亦重为身家计，少得理即止，不至破产。”可见你们惠安人还算老实人，不像我这样好战。但老实也白老实，大案下来，一网兜收，惨不忍睹。幸有老兄万劫余生，如今不惜头皮，硬要一倾肚皮，此“烈士暮年，壮心不已”者也，特修此书，驰以为贺。
 
 敖之1987年2月22日
-
-
 
 司法院有人在打鼾吧？
 
@@ -710,8 +672,6 @@
 
 李敖
 
-
-
 祸延小蒋及其晚娘
 
 ——再致许文彬
@@ -738,8 +698,6 @@
 
 李敖1987年2月26日午
 
-
-
 “良友渐随千劫尽”
 
 启扬老兄：
@@ -761,8 +719,6 @@
 三天前在路上碰到任建园，他说张光锦抱怨说这么多年看不到老同学李敖了，李敖不跟我们老同学来往了。我笑着说：张光锦是现任中将，我跟他来往，对他不方便。启扬老兄，上次我在台北看守所，承你来看我，被我拒见，原因之一，也不无此意在。总之，对老同学，我真有“良友渐随千劫尽”之感，大家相忘于江湖，倒也不错。只是相忘之余，对应争的道理，总未能免于不争，此所以李敖之终为李敖吧？
 
 李敖1987年2月27日夜
-
-
 
 这是什么问案标准？
 
@@ -810,8 +766,6 @@
 
 二、“李教授：经查先生自诉蔡仁坚等诽谤事件本人督促速结兹将最近一次嘱研考科通知承办人及其所属庭庭长妥速办结函影本奉上一阅专此顺颂大安（昨夜乙函谅已查阅）弟吴树立手启3月3日”
 
-
-
 前任作恶，后任当灾
 
 函：1987年3月4日
@@ -857,8 +811,6 @@
 八、再查萧孟能《文星杂志》发行权，前因萧孟能欠李敖债务，业经台北地方法院于去年10月8日嘱请新闻局禁止移传、变更或其他处分登记（北院立民执字第29311号），足见萧孟能纵使要办理变更发行人登记，也不可能。在如此双杀局面下，参照《出版法》第40条第1项第2款规定，萧孟能《文星杂志》应于办理变更发行人登记之前，停止发行，才能符合法制。但是，台北市市长许水德先生，你有没有停止萧孟能《文星杂志》的发行呢？这是我要请你答复的第二点。
 
 九、前任作恶，后任当灾。台北市市长许水德先生，请你就上面两点，给我公道答复吧！
-
-
 
 警察头子们是什么意思？
 
@@ -918,8 +870,6 @@
 
 申请人李敖1987年3月5日
 
-
-
 从恐吓到通缉
 
 ——致台北市警察局大安分局信义路派出所主管任玉斌先生
@@ -952,8 +902,6 @@
 
 李敖1987年4月4日晨10时
 
-
-
 致俞国华先生一封信
 
 函
@@ -973,8 +921,6 @@
 四、以上三点，请查办惠复为荷。
 
 李敖1987年4月6日
-
-
 
 树敌与择友
 
@@ -1001,8 +947,6 @@
 敖之，1987年4月10日夜2时半
 
 〔附记〕胡虚一托我向你致谢，为了你很够朋友的帮了他。
-
-
 
 答非所问是不行的
 
@@ -1108,8 +1052,6 @@
 
 台北市政府新闻处
 
-
-
 关于“记忆”的讨论
 
 致梁实秋先生（李敖）
@@ -1189,8 +1131,6 @@
 双安
 
 李敖1987年5月16日午前
-
-
 
 二李通信
 
@@ -1384,8 +1324,6 @@
 
 敖之1987年5月17夜
 
-
-
 寄刘辰旦谈党外内史
 
 辰旦兄：
@@ -1450,8 +1388,6 @@
 
 敖之1987年6月14日
 
-
-
 给李政一的一封信
 
 政一：
@@ -1478,8 +1414,6 @@
 
 “巴大哥”1987年7月17日
 
-
-
 论定知识分子的着眼点
 
 心仪：
@@ -1504,8 +1438,6 @@
 
 张富忠和你的事，足见你知人不明，我看郑学稼亦复如此。
 
-
-
 盗贼政府
 
 国昌兄：
@@ -1522,8 +1454,6 @@
 
 李敖1987年8月1日晨
 
-
-
 给吴三连的预告信
 
 三连先生：
@@ -1539,6 +1469,3 @@
 既然台北地院做出这种枉法裁判来开脱你们，我现在就印出《蒋经国死了》的书，给包庇你们的人见识见识，特随信附上一册，以证我如何言出必行、你们如何祸延小蒋。至于《吴三连死了》一书，我想你有生之年也可以见到，你就等着拜读吧！
 
 李敖1987年8月3日
-
-
-
