--- a/08.书信函件类/李敖书笺集.md
+++ b/08.书信函件类/李敖书笺集.md
@@ -1,4 +1,8 @@
-#《李敖书笺集》目录
+# 李敖书笺集
+
+<!-- toc -->
+
+## 目录
 
 * 一、我为什么支持王八蛋？
 * 二、斥财阀
@@ -44,8 +48,6 @@
 * 四二、神龙见尾不见首
 * 四三、李氏理想，张氏实行
 
-
-
 我为什么支持王八蛋？
 
 力非先生：
@@ -61,8 +63,6 @@
 大安
 
 李敖1984年2月25日
-
-
 
 斥财阀
 
@@ -92,8 +92,6 @@
 
 李敖1984年2月28日
 
-
-
 谁使雷震有了遗恨？
 
 ——给宋英的一封信
@@ -105,8 +103,6 @@
 大好
 
 李敖1984年3月18日凌晨
-
-
 
 从主流到乱流
 
@@ -150,8 +146,6 @@
 
 李敖1984年6月5日
 
-
-
 “望君早归”不如“望君牺牲”
 
 ——给江鹏坚的一封信
@@ -186,8 +180,6 @@
 
 李敖1984年6月14日晨
 
-
-
 手下-下手-快
 
 鹏坚兄：
@@ -207,8 +199,6 @@
 《水浒传》石秀骂这些“手下”，说他们是“给奴才做奴才的奴才”，如今在国民党统治之下，这种奴中奴可愈来愈多了。顺手写来，聊志凶缘——我们跟国民党竟阴错阳差缠在一个岛上，真他妈的倒霉极矣，何年能快刀断此“戈登结”（theGordianknot），方是人心大快。快，快，快！
 
 敖之1984年7月19日
-
-
 
 党外不可帮国民党擦屁股
 
@@ -234,8 +224,6 @@
 
 这些话都说得不错。党外人士的努力方向之一是：要扣紧国民党的责任所在，不让它“奇门遁甲”，把老K的责任，还给老K，而不是要我们替它分担责任。德国文学家克莱斯特（HenrichvonKleist），在他1808年写的名著《米歇尔科尔哈斯》（MichaelKohlhaas）里，写科尔哈斯发现法律和政府不能保护正义的时候，就等于“他们把棍子给了我，叫我保护自已”。因此他揭竿而起，使腐败的现状为之动摇。党外人士的责任是教穷苦大众自己保护自己，不是帮国民党作秀或跟着国民党作秀，我给许国泰的信，一再叮咛者在此。（1984年7月24日）
 
-
-
 “致敬取消了！”
 
 绝子如晤：
@@ -251,10 +239,6 @@
 昨天早上为告萧孟能、王剑芬，坐车去地检处。计程车司机李先生是河南偃城人，他是二十年前十七师的师部少校退伍的。他说1943年河南大饥荒时候，他们给饿惨了。他后来在“徐蚌会战”（淮海战役，编者注）时又挨饿，国共部队你包围我，我反包围你，大家互相围上加围，大家都饿昏了，找来一双皮鞋，煮软皮，大家抢着吃——国民党一贯作孽，吾又得一证矣！
 
 敖之1984年9月22日晨
-
-
-
-
 
 从告自己人的密到缴自己人的枪
 
@@ -380,8 +364,6 @@
 
 二十八年1月免察哈尔省政府委员兼主席。三十二年3月升第二集团军总司令。三十三年7月获二等云麾勋章，8月入陆军大学将官班第一期受训。三十四年夏，当选中国国民党第六届中央候补监察委员，8月抗战胜利后，已升任第五战区（司令长官刘峙）副司令长官，12月任郑州绥靖公署（主任刘峙）副主任，后兼任第四绥靖区司令官。三十六年3月获四等宝鼎勋章。三十七年1月获三等宝鼎勋章，8月兼任徐州剿匪总司令部（总司令刘峙）副总司令，徐蚌会战时驻守蚌埠。其后所部改称第八兵团，任司令官，旋又兼任京沪杭警备总司令部（总司令汤恩伯）副总司令。三十八年4月共军渡江，国军转进，率部经皖、赣入闽，又任闽粤边区剿匪总司令，所部第五十五军守厦门，10月撤退来台，四十一年退役。六十四年4月28日病逝，年八十一岁。著有《刘汝明回忆录》一书及《七七忆旧友》短文数篇（于翔麟稿。参考《刘汝明回忆录》《政府公报》《国民政府公报》）。
 
-
-
 捞过了界的扣押
 
 水扁兄：
@@ -399,8 +381,6 @@
 李敖1984年10月4日
 
 随信另附我的《给杨金欉市长的一封信》，是质问有关“财团法人萧同兹先生文化基金会”的事。“财团法人萧同兹先生文化基金会”完成设立登记，台北市政府发下“财团法人设立许可证书”，日期是“中华民国六十三年10月22日”，号码是“（63）北市教四字第045号”，设立地址是“台北市信义路四段1-110号”。但是自从设立登记后，十年之间，只有基金五万元（原决议是五百万元），会址也被萧孟能卖掉了，自然没有做出任何一件与登记旨趣相合的事，台北市政府当然有责任清查。国民党于基金会之成立，登记素称严格，此于“陈文成文教基金会”以命案未破为由，不准成立可证。如今该党中央评议委员萧同兹死了，纪念他的基金会却如此没有实绩，自应由台北市政府彻查，予以撤销。此事一并请老兄代为质询为感。
-
-
 
 政治规格的讨论
 
@@ -446,8 +426,6 @@
 
 敖之1984年10月24日晨
 
-
-
 胡茵梦的“天性”问题
 
 ——给《联合报》等报的更正信
@@ -475,8 +453,6 @@
 李敖1984年11月29日
 
 〔附记〕上面的信，《联合报》等报并没依法刊出，这当然是国民党斗臭李敖的一贯政策，不足为异也。
-
-
 
 雪中送炭与雪中送肉
 
@@ -508,8 +484,6 @@
 
 敖哥1984年12月9日
 
-
-
 是李敖就没完的！
 
 ——给国民党司法院院长、法务部部长的信
@@ -535,8 +509,6 @@
 然而，第二审法院就伪造文书部分改判无罪后，究竟有否将不能并办的背信侵占部分，退回检察官处理，因未依上揭规定通知告诉人，不得而知；而执行检察官于办理确定案件执行时（按：判决无罪确定案件，依实务上规定亦应移送执行，法院不得径行归档），又未注意将上述案件退回检察官另行侦办，以致时逾三年，仍无下文。我等呀等的，等得不耐烦了，乃于本年8月间，具状申请处理，地检处才又开庭。似此“案件进行迟延，显然过久而无正当理由”的情形，参照1973年4月28日《司法行政部所属院检监人员奖惩案件处理办法》第15条第8款规定，是否应该惩罚？还是要官官相护，一切遮盖了事？这种一睡觉就大睡三年的笑话，究竟是“审方”包庇了推事陈培基、张济团、谢家鹤等一干人员，还是“检方”包庇了从上到下的一干人员？自然要请你们答复。你们休想一切缩着头，以为问题便完了，请搞清对方是谁，是李敖就没完的！
 
 李敖1984年12月13日
-
-
 
 驳国民党议员的四点胡说
 
@@ -578,8 +550,6 @@
 
 郁慕明表示，第一、《秋海棠》所刊登的文章，并不是议论李敖为主，事实上涉及李敖部分，只占文章的一小部分。第二、他未收到李敖的要求更正函，而陈水扁巳收到冯沪祥的更正函。第三、《秋海棠》只刊登该篇文章一次，而《蓬莱岛》则连续刊登相关文章。第四、《秋海棠》刊登该篇文章期间，他帮助高忠信助选，未涉及编务；在这段期间内，他指定有法定代理人；社长兼总编辑赵宁在该段期间亦出国，未负责编务，因此李敖“告错对象”。（1985年1月13日《自立晚报》）
 
-
-
 二十年后的一次通信
 
 潘毓刚寄李敖
@@ -607,8 +577,6 @@
 台北这两天真冷，兹抄你们的行话，报告如下：隆冬期间，往往在大陆东岸及中、北太平洋上，由于海水和大气热量交换的关系，形成一个“阻塞”现象。此一“阻塞”现象称之为“阻塞高压”，它犹如一道无形的“墙”，阻止了南下的大陆冷高压（寒流）经过台湾顺利东移，造成了冷空气在台湾上空长时间的驻留。其实国民党在台湾、在中国，它的真正罪孽就是在此，它“阻塞”了别人前进，造成了冷空气在上空长时间驻留。国民党的最可恶之处，不在它自己的作恶，而在它“阻塞”别人为善，它总是裹胁广大中国人民为它殉葬，自己去死还不够，还要拉别人一起死，这是最不可原谅的事，广大中国人民为它误尽青春，又不能免于偕亡，这真是中国的悲剧。你现在远托异国，总算有免于偕亡之苦，但是，你看，你巳经“满头白发”了！（你电话中，说看我书背照片，满头黑发，问我是否染发，此乃真正人身攻击。其实我满头黑发，没一根白的，全是原装货。就凭此原装货，才有跟国民党纠缠个没完的本钱，专此奉闻，以炫老友小潘也！）哈哈！
 
 李敖1985年1月15日
-
-
 
 谁露了奶头？
 
@@ -638,8 +606,6 @@
 
 学兄李敖手启1985年1月19日晨
 
-
-
 寄赠阅户
 
 敬启者：
@@ -663,8 +629,6 @@
 另外有一些赠书，是每月送给一些帮过我的特定的朋友的，因为不能再邮寄，也只好一并办理。同样请打电话取书为感。真抱歉每月送点书都不能顺利，真抱歉。他妈的国民党真该死！
 
 李敖1985年2月12日夜
-
-
 
 驳国民党议员老婆的一片胡说
 
@@ -784,8 +748,6 @@
 
 李敖1985年3月12日
 
-
-
 维护人权与维护正义
 
 ——给周灿雄的信
@@ -803,8 +765,6 @@
 本案重点是吴敦他们被国民党唆使于先、出卖于后，就这一重点来看，吴敦他们是可怜的。当然更可怜的是刘宜良——他们全体都是国民党卑鄙作恶的牺牲品，国民党的不可原谅，在这一案子里，真是集大成了！
 
 李敖1985年4月1日
-
-
 
 十日新谈
 
@@ -836,8 +796,6 @@
 
 敖之1985年5月24日晨
 
-
-
 我有我的方式
 
 会云：
@@ -859,8 +817,6 @@
 四十六期“千秋”上我决定发表《金兰琐碎》，其中有《吴俊才来访》，是重要的一天日记。那是我继拒绝与陈诚合作、拒绝与蒋经国合作后，又一次拒绝合作的例子。一些人以为我李敖的长处是会写文章，才华盖世，其实我最欣赏我自己的，不在才华，而在我有伟大的人格——我在台湾几十年，在老K通吃下，就是不给它吃、就是不同它合作，这是何等不容易！何等伟大的人格！换成别人，在陈诚、蒋经国的刻意拉拢下，早就下海矣！但我李敖就是不干。如今人口相传，只说我李敖是能文之士，岂知我哉！岂知我哉！
 
 敖之1985年6月8日晨
-
-
 
 准衣锦，不准荣归
 
@@ -889,8 +845,6 @@
 李敖1985年7月28日夜
 
 每天写稿写字过多，多得已经无力誊清，这信太潦草，乞谅。
-
-
 
 丢掉假团结，才有真革命
 
@@ -934,8 +888,6 @@
 
 李敖1985年7月29日
 
-
-
 揪出伪君子
 
 ——复苏洪月娇的信
@@ -963,8 +915,6 @@
 东启先生、治洋请代致意
 
 李敖1985年7月31日
-
-
 
 大家买人心
 
@@ -1002,8 +952,6 @@
 
 李敖1985年8月10日晨
 
-
-
 致“台湾第一不要脸”书
 
 国民党任命的离雄市长苏南成先生：
@@ -1028,8 +976,6 @@
 
 李敖1985年8月10日
 
-
-
 我决定管一次小事
 
 台湾铁路管理局局长先生：
@@ -1051,8 +997,6 @@
 以上六件，都是大时代中的小事，也许不该我多分心，但是既然看到了，实在忍不住不说，我不说而等小百姓说，真不知要等到何年何月——我看小百姓是忍气吞声的、是怕麻烦的、是不会说的，此正由淡水线上积弊之深可知也！所以我决定管一次小事，写这封信给你。请你逐项给我答复。答复得要切实，请别打太极拳，你打太极拳，我决搬出省议员来质问你，那时候就有你和你的上司的好看了！
 
 李敖1985年9月19夜
-
-
 
 苍蝇也没那么好拍的！
 
@@ -1122,8 +1066,6 @@
 
 李敖1985年10月10日晨
 
-
-
 “恃他族之庇”有何不好？
 
 鹏坚兄：
@@ -1151,8 +1093,6 @@
 进步
 
 李敖1985年10月19日午
-
-
 
 “千秋评论”连出五十期了！
 
@@ -1183,8 +1123,6 @@
 我在台湾的终局，如此而已。
 
 李敖1985年11月10日午前
-
-
 
 大登特登与一字不登
 
@@ -1238,8 +1176,6 @@
 
 弟骆学良敬上4月1日
 
-
-
 谁逼辜振甫还了债？
 
 林永智致李敖
@@ -1283,8 +1219,6 @@
 但在我这方面，我总觉得，债务的付之解决，你老弟锲而不舍地奔走，积功最多，辜伟甫能有你这样一位青年朋友为他料理后事以全令名，真是他的幸运。我觉得辜家债权人全体应该感谢的是你，虽然他们如今惊魂甫定，来不及感谢任何功臣了。
 
 李敖1986年4月14日夜
-
-
 
 关于三毛与雷三毛
 
@@ -1356,8 +1290,6 @@
 
 敖之1986年4月20日夜
 
-
-
 “好而知其恶，恶而知其美”
 
 虚一老兄：
@@ -1387,8 +1319,6 @@
 老兄大做好梦也！
 
 敖之1986年5月23日夜12时半
-
-
 
 如此“便民”
 
@@ -1468,8 +1398,6 @@
 
 〔附记〕我6月7日星期六大骂了台湾中小企业银行板桥分行梁经理。6月9日星期一他们就赶忙以该行名义，办理了自行涂销。可见这些公务员，不跟他来硬的是不行的。
 
-
-
 被嚼槟榔的吻了一下
 
 李宁：
@@ -1481,8 +1409,6 @@
 王梵志写诗，说：“梵志翻着袜，人皆道是错。乍可刺你眼，不可隐我脚。”一个人要特立独行，保持自我，反穿袜子可以证明真理，有时也在所不惜。这样做的时候，外界毁誉，实不足介怀。国民党毁我多年，但被他们毁，像被臭虫咬了一下；党外誉我数载，但被他们誉，像被嚼槟榔的吻了一下。对这种毁誉，我只是好笑，想做鬼脸呢！
 
 李敖1986年6月29日
-
-
 
 耻与为伍
 
@@ -1520,8 +1446,6 @@
 
 李敖1986年8月13日
 
-
-
 成功在第三次
 
 ——留给陈又亮的信
@@ -1556,8 +1480,6 @@
 
 李敖1986年8月26日夜
 
-
-
 爱因斯坦的两段话
 
 兆基：
@@ -1579,8 +1501,6 @@ Suchisolationissometimesbitter,butIdonotregretbeingcutofffromtheunderstandingand
 大好，新娘子一并大好
 
 敖之1986年9月1日
-
-
 
 彼以熊来，吾以熊往
 
@@ -1616,8 +1536,6 @@ Suchisolationissometimesbitter,butIdonotregretbeingcutofffromtheunderstandingand
 
 〔附记〕写这封信后三年多，李老太倦游美国、大陆，还是回到台湾了。她觉悟到还是儿子最好，余生要跟儿子住在一起。足证胡老太诬指她被儿子赶出去之说，全是造谣。相对的，胡老太和胡茵梦母女二人倒是分开了，只不知谁赶谁而已。
 
-
-
 神龙见尾不见首
 
 亨利老兄：
@@ -1651,8 +1569,6 @@ Suchisolationissometimesbitter,butIdonotregretbeingcutofffromtheunderstandingand
 敖之1986年9月5日
 
 名山大业之事，由“神秘送信人”面达，此人可以信任。
-
-
 
 李氏理想，张氏实行
 
@@ -1703,6 +1619,3 @@ Suchisolationissometimesbitter,butIdonotregretbeingcutofffromtheunderstandingand
 大发特发
 
 敖之1986年9月7日夜深
-
-
-
